# breeze-desk

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-TW.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
cmake/: BreezeDeskCompilerCache.cmake  BreezeDeskWarnings.cmake  Info.plist.in  ReadProjectIdentity.cmake  ReadProjectVersion.cmake  app_config.h.in  breezedesk.rc.in  qt_source_info.txt.in  update_config.h.in  version.h.in
cmake/dependencies/: README.md
docs/adr/: 0001-qt-qml.md  0002-native-whisper-worker.md  0003-sqlite.md  0004-ffmpeg-sidecar.md  0005-windows-backend-variants.md  0006-long-form-chunking.md
docs/developer/: architecture.md  build-from-source.md  database.md  localization.md  logging-and-diagnostics.md  long-form-transcription.md  model-manifest.md  release-packaging.md  testing.md  whisper-integration.md  worker-protocol.md
docs/licenses/: Qt-LGPL-NOTICE.md  README.md
docs/user/: cli.md  editing.md  exporting.md  getting-started.md  glossary.md  importing-media.md  models.md  privacy.md  recording.md  transcription.md  troubleshooting.md
packaging/macos/: build-ffmpeg-lgpl.sh  entitlements.plist  fetch-sparkle.sh  package.sh  sign-sparkle-update.sh
packaging/windows/: AppxManifest.xml.in  build-ffmpeg-lgpl.ps1  create-msix.ps1  deploy-cuda-runtime.ps1  fetch-winsparkle.ps1  generate-icon.ps1  installer.nsi  package.bat  sign-artifacts.ps1  sign-winsparkle-update.ps1  (+1 more)
resources/: resources.qrc
scripts/: build-and-run.bat  build-and-run.sh  build-release.bat  build-release.sh  build.bat  build.sh  deploy-debug.bat  download-test-model.sh  export-msvc-environment.ps1  extract-changelog_entry.py  generate-release-metadata.py  package-macos.sh  prepare-debug-media-tools.ps1  release-translations.bat  release-translations.sh  run-breeze-model-smoke.sh  run-tests.bat  run-tests.sh  setup-msvc.bat  update-translations.bat  update-translations.sh  verify-breeze-smoke.py
src/app/: CMakeLists.txt  MaintenanceController.cpp  ModelTestController.cpp  TranscriptionCoordinator.cpp  WorkerProcessManager.cpp  main.cpp
src/asr/: AsrTypes.cpp  CMakeLists.txt  LongFormChunkPlanner.cpp  LongFormTranscriber.cpp  ModelFileIntegrity.cpp  OverlapDeduplicator.cpp  PresetRegistry.cpp  PromptTokenBudget.cpp  SegmentMetrics.cpp  StreamingVadSegmenter.cpp  WhisperBackendInfo.cpp  WhisperContext.cpp  WhisperLogBridge.cpp  WhisperModelSession.cpp  WhisperParameterMapper.cpp  WhisperSegmentCollector.cpp  WhisperTranscriptionEngine.cpp
src/audio/: AudioCacheManager.cpp  CMakeLists.txt  FFmpegLocator.cpp  FFmpegNormalizationService.cpp  FFprobeService.cpp  IAudioNormalizer.cpp  MediaFileSupport.cpp  MediaMetadata.cpp  MicrophoneRecorder.cpp  NormalizedAudioValidator.cpp  WaveformGenerator.cpp
src/cli/: CMakeLists.txt  CliForwardingPolicy.cpp  CliTranscriptionPersistence.cpp  main.cpp
src/core/: ApplicationLogger.cpp  CMakeLists.txt  Error.cpp  LoggingCategories.cpp  StoragePaths.cpp  TemporaryFileJanitor.cpp  TextUtils.cpp  TimeUtils.cpp
src/database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseSearchService.cpp  SqliteRecordingRepository.cpp
src/glossary/: CMakeLists.txt  GlossaryPostProcessor.cpp  GlossarySerializer.cpp  PromptComposer.cpp  SqliteGlossaryRepository.cpp
src/ipc/: ApplicationCommand.cpp  AsrWorkerClient.cpp  CMakeLists.txt  FrameCodec.cpp  LocalEndpoint.cpp  Protocol.cpp  SingleInstanceGuard.cpp  WorkerServer.cpp
src/jobs/: CMakeLists.txt  JobQueue.cpp  JobRecoveryService.cpp  JobStateMachine.cpp  SqliteJobRepository.cpp  TranscriptionJob.cpp
src/models/: CMakeLists.txt  ModelDownloadOperation.cpp  ModelManager.cpp  ModelManifest.cpp
src/platform/: CMakeLists.txt  InstallSourceClassifier.cpp  PlatformCapabilities.cpp  PlatformService_generic.cpp  PlatformService_mac.mm  PlatformService_win.cpp  WorkerRegistry.cpp
src/settings/: CMakeLists.txt  SettingsManagers.cpp  SettingsStore.cpp
src/transcript/: CMakeLists.txt  SqliteTranscriptRepository.cpp  TranscriptAutosave.cpp  TranscriptEditor.cpp  TranscriptExporter.cpp
src/ui/: ApplicationViewModel.cpp  BrandIcons.cpp  CMakeLists.txt  DesignSystem.cpp  DiagnosticsViewModel.cpp  GlossaryViewModel.cpp  JobListModel.cpp  JobQueueViewModel.cpp  LibraryViewModel.cpp  ModelManagerViewModel.cpp  PlayerViewModel.cpp  RecordingDetailViewModel.cpp  RecordingListModel.cpp  SettingsViewModel.cpp  TranscriptRevisionModel.cpp  TranscriptRevisionViewModel.cpp  TranscriptSegmentModel.cpp  TranscriptViewModel.cpp  UiRegistration.cpp  WaveformItem.cpp
src/update/: CMakeLists.txt  NullUpdateService.cpp  SparkleUpdateService_mac.mm  UpdateCoordinator.cpp  UpdateServiceFactory.h  WinSparkleUpdateService_win.cpp
src/worker/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/App/: CMakeLists.txt  tst_InstallSourceClassifier.cpp  tst_MaintenanceController.cpp  tst_ModelTestController.cpp  tst_UpdateCoordinator.cpp  tst_WorkerRegistry.cpp
tests/Asr/: CMakeLists.txt  tst_AsrCore.cpp  tst_ModelIntegration.cpp
tests/Audio/: CMakeLists.txt  normalization_process_helper.cpp  tst_Audio.cpp
tests/Database/: CMakeLists.txt  tst_Database.cpp
tests/Glossary/: CMakeLists.txt  tst_Glossary.cpp
tests/IPC/: CMakeLists.txt  single_instance_race_helper.cpp  tst_CliForwardingPolicy.cpp  tst_FrameCodec.cpp  tst_SingleInstanceGuard.cpp  tst_WorkerProcess.cpp  tst_WorkerProcessManager.cpp  tst_WorkerTransport.cpp
tests/Jobs/: CMakeLists.txt  coordinator_worker_helper.cpp  tst_CliTranscriptionPersistence.cpp  tst_Jobs.cpp  tst_TranscriptionCoordinator.cpp
tests/Models/: CMakeLists.txt  tst_Models.cpp
tests/Qml/: CMakeLists.txt  QmlTestApplication.h  tst_JobQueueViewModel.cpp  tst_QmlSmoke.cpp
tests/Settings/: CMakeLists.txt  tst_Settings.cpp
tests/Transcript/: CMakeLists.txt  tst_Transcript.cpp
tests/Utils/: CMakeLists.txt  tst_ApplicationLogger.cpp  tst_CoreUtilities.cpp
translations/: breezedesk_en.ts  breezedesk_zh_TW.ts
(+173 files in other folders)
